<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    android:visibility="visible"
    tools:context=".MainActivity">

    <!-- CardView Container -->
    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="680dp"
        android:layout_margin="30dp"
        android:elevation="50dp"
        android:padding="50dp"
        app:cardBackgroundColor="#DBECF2"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <!-- Logo Image -->

            <!-- Register Label -->

            <!-- Register Button -->


            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="220dp"
                android:layout_height="220dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/logo_desc"
                android:scaleType="centerInside"
                android:src="@drawable/tooth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/registerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/register_label"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoImage" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="02dp"
                android:backgroundTint="@android:color/white"
                android:elevation="15dp"
                android:padding="12dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerLabel" />

            <!-- Login Label -->
            <TextView
                android:id="@+id/loginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:text="@string/login_label"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonRegister" />

            <!-- Login Button -->
            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="02dp"
                android:backgroundTint="@android:color/white"
                android:elevation="5dp"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginLabel" />

            <!-- Admin Login Button -->
            <Button
                android:id="@+id/buttonLoginAdmin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@android:color/white"
                android:elevation="5dp"
                android:padding="12dp"
                android:text="@string/login_as_admin"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>