<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FBFBFB"
    tools:context=".OTPVerificationActivity">

    <!-- CardView Container -->
    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="683dp"
        android:layout_margin="30dp"
        android:elevation="50dp"
        android:padding="50dp"
        app:cardBackgroundColor="#DBECF2"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <!-- Heading: Enter OTP Code -->
            <TextView
                android:id="@+id/textEnterOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_otp_code"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- OTP Input Field -->

            <!-- OTP Info Text -->

            <EditText
                android:id="@+id/editTextOTP"
                android:layout_width="272dp"
                android:layout_height="48dp"
                android:layout_marginTop="60dp"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_otp"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEnterOTP" />

            <!-- Verify OTP Button -->
            <TextView
                android:id="@+id/textOTPInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/otp_info"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.23"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextOTP" />

            <!-- Previous Button -->

            <Button
                android:id="@+id/buttonVerifyOTP"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@android:color/white"
                android:elevation="10dp"
                android:padding="12dp"
                android:text="@string/verify_otp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.394"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textOTPInfo" />

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="68dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@android:color/white"
                android:elevation="15dp"
                android:padding="12dp"
                android:text="@string/previous"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonVerifyOTP" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
